# sylva

./: Cargo.toml  Makefile  README.md  rustfmt.toml
benches/: batch_proof_benchmarks.rs  compression_benchmarks.rs  hash_benchmarks.rs  optimization_benchmarks.rs
examples/: visualization_examples.md
src/: cli.rs  config.rs  error.rs  hash.rs  ledger.rs  lib.rs  main.rs  proof.rs  storage.rs  tree.rs  workspace.rs
src/cache/: mod.rs
src/cli/: commit.rs  compare.rs  export.rs  info.rs  mod.rs  optimize.rs  prove.rs  verify.rs  visualize.rs
src/config/: legacy.rs  mod.rs
src/hash/: blake3.rs  keccak.rs  mod.rs  poseidon.rs  registry.rs  sha256.rs
src/ledger/: legacy.rs  mod.rs
src/proof/: batch.rs  inclusion.rs  mod.rs  sparse.rs
src/storage/: compression.rs  ledger.rs  mmap.rs  mod.rs
src/streaming/: buffer.rs  builder.rs  mod.rs  progress.rs  proof.rs  recovery.rs  temporal.rs
src/tree/: binary.rs  factory.rs  legacy.rs  mod.rs  node.rs  patricia.rs  sparse.rs
src/workspace/: legacy.rs  mod.rs
tests/: compare_merge_tests.rs  edge_cases_extra.rs  integration_comprehensive.rs  mmap_large_dataset_tests.rs  optimization_tests.rs  streaming_large_dataset_tests.rs  unified_tree_tests.rs  verify_integration_tests.rs  visualization_tests.rs
