[package]
name = "sylva"
version = "0.1.0"
edition = "2021"
description = "A versioned ledger and proof system for verifiable data"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yourusername/sylva"
repository = "https://github.com/yourusername/sylva"
keywords = ["ledger", "versioned", "proof", "verification", "blockchain"]
categories = ["data-structures", "cryptography", "database"]
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
toml = "0.8"
directories = "5.0"
indicatif = "0.17"
rayon = "1.8"
comfy-table = "7.1"
base64 = "0.22"
zstd = "0.13"
crc32fast = "1.3"
memmap2 = "0.9"
lazy_static = "1.4"
rlp = "0.5"
light-poseidon = "0.3.0"
ark-ff = "0.5"
ark-bn254 = "0.5"
num-bigint = "0.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
pretty_assertions = "1.4"
proptest = "1.4"

[[bench]]
name = "hash_benchmarks"
harness = false

[[bench]]
name = "batch_proof_benchmarks"
harness = false

[[bench]]
name = "compression_benchmarks"
harness = false

[[bench]]
name = "optimization_benchmarks"
harness = false

[lints.clippy]
all = { level = "deny", priority = -1 }
# Allow reasonable exceptions
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
similar_names = "allow"